# invers

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  PERFORMANCE.md  README.md  RELEASING.md  conductor-setup.sh  conductor.json  research.md
.claude/: settings.local.json
.cursor/plans/: posit-a53a1b07.plan.md
.github/workflows/: build.yml  ci.yml  release.yml
Formula/: invers.rb
assets/: README.md
config/: pipeline_defaults.yml
crates/invers-cli/: CLAUDE.md  Cargo.toml
crates/invers-cli/src/: lib.rs  main.rs
crates/invers-cli/src/args/: debug.rs  mod.rs  pipeline.rs
crates/invers-cli/src/builders/: cb.rs  mod.rs  options.rs
crates/invers-cli/src/commands/: analyze.rs  batch.rs  convert.rs  debug.rs  init.rs  mod.rs  preset.rs
crates/invers-cli/src/parsers/: base.rs  cb.rs  mod.rs  pipeline.rs
crates/invers-cli/src/processing/: input.rs  mod.rs  single.rs
crates/invers-cli/src/types/: mod.rs  params.rs  white_balance.rs
crates/invers-core/: CLAUDE.md  Cargo.toml
crates/invers-core/.claude/: settings.local.json
crates/invers-core/benches/: pipeline.rs
crates/invers-core/src/: auto_adjust.rs  color.rs  config.rs  decoders.rs  diagnostics.rs  exporters.rs  lib.rs  models.rs  pipeline.rs  presets.rs  testing.rs
crates/invers-core/src/auto_adjust/: color.rs  exposure.rs  levels.rs  mod.rs  parallel.rs  white_balance.rs
crates/invers-core/src/auto_adjust/levels/: analysis.rs  auto_levels.rs  histogram.rs  mod.rs  tests.rs
crates/invers-core/src/auto_adjust/white_balance/: auto_wb.rs  compute.rs  kelvin.rs  mod.rs  tests.rs
crates/invers-core/src/cb_pipeline/: histogram.rs  layers.rs  mod.rs  process.rs  tests.rs  white_balance.rs
crates/invers-core/src/color/: conversions.rs  hsl.rs  lab.rs  mod.rs  tests.rs
crates/invers-core/src/config/: defaults.rs  mod.rs  testing.rs
crates/invers-core/src/decoders/: mod.rs  png.rs  raw.rs  tests.rs  tiff.rs
crates/invers-core/src/diagnostics/: compare.rs  mod.rs  output.rs  stats.rs
crates/invers-core/src/gpu/: buffers.rs  context.rs  mod.rs  pipeline.rs  tests.rs
crates/invers-core/src/gpu/context/: init.rs  mod.rs  pipelines.rs
crates/invers-core/src/gpu/pipeline/: analysis.rs  cb.rs  dispatch.rs  histogram.rs  legacy.rs  mod.rs  ops.rs  ops_batched.rs
crates/invers-core/src/gpu/shaders/: cb_inversion.wgsl  cb_layers.wgsl  color_convert.wgsl  color_matrix.wgsl  fused_invert.wgsl  fused_postprocess.wgsl  histogram.wgsl  inversion.wgsl  mod.rs  subsample.wgsl  tone_curve.wgsl  utility.wgsl
crates/invers-core/src/models/: base_estimation.rs  cb.rs  convert_options.rs  mod.rs  preset.rs  scan_profile.rs
crates/invers-core/src/models/cb/: color_model.rs  enums.rs  histogram.rs  mod.rs  options.rs  presets.rs  tone_profile.rs
crates/invers-core/src/models/convert_options/: defaults.rs  density.rs  enums.rs  impls.rs  mod.rs
crates/invers-core/src/models/scan_profile/: hints.rs  hsl.rs  mask.rs  mod.rs  profile.rs  tests.rs
crates/invers-core/src/pipeline/: base_estimation.rs  helpers.rs  inversion.rs  legacy.rs  mod.rs  research.rs  tests.rs  tone_mapping.rs
crates/invers-core/src/pipeline/base_estimation/: analysis.rs  extraction.rs  methods.rs  mod.rs  tests.rs
crates/invers-core/src/pipeline/inversion/: mod.rs  modes.rs  reciprocal.rs  tests.rs
crates/invers-core/src/pipeline/tone_mapping/: apply.rs  curves.rs  mod.rs  tests.rs
crates/invers-core/src/testing/: from_impls.rs  grid_search.rs  mod.rs  runners.rs  scoring.rs  types.rs
crates/invers-gui/: Cargo.toml  README.md
crates/invers-gui/qml/: main.qml
crates/invers-gui/src/: app_state.rs  main.rs  preview.rs  roi_tool.rs  viewer.rs
crates/invers-raw/: CLAUDE.md  Cargo.toml
crates/invers-raw/src/: lib.rs
crates/invers-web/: Cargo.toml  Trunk.toml  index.html
crates/invers-web/src/: app.rs  embedded_presets.rs  lib.rs  processing.rs  state.rs
crates/positize-cli/: Cargo.toml
crates/positize-cli/src/: main.rs
crates/positize-core/: Cargo.toml
crates/positize-core/src/: auto_adjust.rs  color.rs  config.rs  decoders.rs  diagnostics.rs  exporters.rs  lib.rs  models.rs  pipeline.rs  presets.rs  testing.rs
crates/positize-gui/: Cargo.toml  README.md
crates/positize-gui/qml/components/: ImageViewer.qml  RoiOverlay.qml
crates/positize-gui/src/: app_state.rs  main.rs  preview.rs  ui.rs
profiles/: README.md
profiles/film/: README.md  dark-base-negative.yml  fuji-superia-400.yml  generic-bw.yml  generic-color-negative-asymmetric.yml  generic-color-negative.yml  light-base-negative.yml  manual-base-negative.yml  optimized-standard.yml
profiles/scan/: dslr-generic.yml  epson-flatbed.yml  plustek-8200i.yml
scripts/: compare_base_detection.py  update-formula.sh
scripts/reference_compare/: README.md  analyze_metrics.py  compare_reference.py  requirements.txt  run_sweep.py  setup.sh  suggest_improvements.py
scripts/reference_compare/utils/: __init__.py  imagemagick.py
