[workspace]
members = [
    "crates/invers-core",
    "crates/invers-cli"
    ]
resolver = "2"

[workspace.package]
version = "0.2.5"
edition = "2021"
authors = ["Aaron F. Anderson"]
license = "MIT"
repository = "https://github.com/narrowstacks/invers"
homepage = "https://github.com/narrowstacks/invers"
description = "A professional-grade film negative to positive conversion tool"
