[workspace]
members = [
    "crates/invers-raw",
    "crates/invers-core",
    "crates/invers-cli"
    ]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["Aaron F. Anderson"]
license = "MIT"
repository = "https://github.com/narrowstacks/invers"
homepage = "https://github.com/narrowstacks/invers"
description = "A professional-grade film negative to positive conversion tool"

# Optimized release profile for maximum performance
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

# Benchmark profile inherits release optimizations with debug symbols
[profile.bench]
inherits = "release"
debug = true
