[package]
name = "invers-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
invers-core = { path = "../invers-core" }
rayon = "1.11.0"
serde_json = "1.0.145"
serde_yaml = "0.9.34"
