[package]
name = "invers-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["native"]
native = ["rayon", "dirs"]
wasm = []

[dependencies]
dirs = { version = "6.0.0", optional = true }
image = "0.25.8"
kamadak-exif = "0.6.1"
ndarray = "0.16.1"
png = "0.18.0"
rayon = { version = "1.11.0", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tiff = "0.10.3"
