[package]
name = "invers-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core library for invers - film negative to positive conversion"

[features]
default = []
gpu = ["wgpu", "pollster", "bytemuck"]

[dependencies]
dirs = "6.0.0"
image = "0.25.8"
kamadak-exif = "0.6.1"
ndarray = "0.16.1"
png = "0.18.0"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tiff = "0.10.3"
rsraw = "0.1"
rsraw-sys = "0.1"

# GPU acceleration (optional)
wgpu = { version = "23.0", optional = true }
pollster = { version = "0.4", optional = true }
bytemuck = { version = "1.21", features = ["derive"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "pipeline"
harness = false
