[package]
name = "positize-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
positize-core = { path = "../positize-core" }

# GUI framework
eframe = "0.30"
egui = "0.30"

# File dialog
rfd = "0.15"

# Image handling for display
image = "0.25"
